<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <CheckBox
        android:text="@string/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbFilterExplicit"
     />

    <CheckBox
        android:text="@string/max_track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbMaxTrackTime"
        android:layout_below="@+id/cbMinTrackTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <CheckBox
        android:text="@string/min_track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbMinTrackTime"
        android:layout_below="@+id/cbFilterExplicit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
