<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_name"
        android:id="@+id/txtSessionName"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxtSessionName"
        android:layout_marginTop="35dp"
        android:maxLines="1"
        android:maxLength="15"
        android:layout_below="@+id/txtSessionName"
        android:layout_alignLeft="@+id/txtSessionName"
        android:layout_alignStart="@+id/txtSessionName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:hint="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/key"
        android:id="@+id/txtKey"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnHost"
        android:layout_alignStart="@+id/btnHost"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxtAddress"
        android:maxLines="1"
        android:maxLength="5"
        android:layout_below="@+id/txtKey"
        android:layout_alignLeft="@+id/txtKey"
        android:layout_alignStart="@+id/txtKey"
        android:layout_marginTop="49dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapCharacters"
        android:hint="@string/keyhint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_session"
        android:id="@+id/btnJoin"
        android:layout_below="@+id/etxtAddress"
        android:layout_alignLeft="@+id/etxtAddress"
        android:layout_alignStart="@+id/etxtAddress"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/txtSessionName"
        android:layout_alignEnd="@+id/txtSessionName"
        android:onClick="onClick"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/txtLoadMessage"
        android:layout_alignBottom="@+id/pbLoading"
        android:layout_toLeftOf="@+id/pbLoading"
        android:layout_toStartOf="@+id/pbLoading" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_session"
        android:id="@+id/btnHost"
        android:layout_marginTop="46dp"
        android:onClick="onClick"
        android:layout_below="@+id/etxtSessionName"
        android:layout_alignLeft="@+id/etxtSessionName"
        android:layout_alignStart="@+id/etxtSessionName" />

    <Switch
        android:text="@string/filter_tracks"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnHost"
        android:layout_toRightOf="@+id/btnHost"
        android:layout_toEndOf="@+id/btnHost"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/swFilter" />



</RelativeLayout>