<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".DynamicDjSession">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_name"
        android:id="@+id/txtSessionName"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/pbSearching"
        android:layout_alignLeft="@+id/txtKey"
        android:layout_alignEnd="@+id/pbSearching" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstTracks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/imgControl"
        android:layout_below="@+id/etxtSongSearch" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgControl"
        android:src="@mipmap/ic_icon"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/add_song" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/key"
        android:id="@+id/txtKey"
        android:layout_alignParentTop="true"
       />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbSearching"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imgControl"
        android:layout_toStartOf="@+id/imgControl" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgSong"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/the_image_of_the_current_song" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgPlayPause"
        android:src="@mipmap/ic_play"
        android:layout_alignTop="@+id/imgSong"
        android:layout_toRightOf="@+id/imgSong"
        android:layout_toEndOf="@+id/imgSong"
        android:contentDescription="@string/plays_or_pause_s_the_current_song" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgDisplayLikes"
        android:src="@mipmap/ic_heart"
        android:layout_alignBottom="@+id/txtSessionName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/search" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxtSongSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/pbSearching"
        android:layout_toLeftOf="@id/pbSearching"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_below="@+id/txtSessionName"
        android:hint="@string/search" />



</RelativeLayout>